--- a/CursoAndroid/app/src/main/res/layout/activity_curso_android.xml
+++ b/CursoAndroid/app/src/main/res/layout/activity_curso_android.xml
@@ -8,7 +8,7 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/editText"
+        android:id="@+id/editText1"
         android:layout_alignParentTop="true"
         android:inputType="none"
         android:layout_alignParentLeft="true"
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:text="+"
         android:id="@+id/textView"
-        android:layout_below="@+id/editText"
+        android:layout_below="@+id/editText2"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="74dp" />
 
