Listening EditText from Arduino

--- a/CursoAndroid/app/src/main/res/layout/activity_curso_android.xml
+++ b/CursoAndroid/app/src/main/res/layout/activity_curso_android.xml
@@ -16,15 +16,6 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="+"
-        android:id="@+id/textView"
-        android:layout_below="@+id/editText2"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="74dp" />
-
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -48,7 +39,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Calcular"
+        android:text="Somar"
         android:id="@+id/button"
         android:layout_above="@+id/textView2"
         android:layout_centerHorizontal="true"
